# python-meson-pkg

./: README.txt  meson.build  pyproject.toml
